# llm_asr_chat_base_qwen

./: .env  .gitignore  README.md  requirements.txt  test.py  test_tts.py  在本地部署LLM模型 并接入ASR模型实现外部语音接口与LLM对话聊天 318f63eb3f93808aaef9d4371b5b5e11.md
lam_qwen3/: Cargo.toml
lam_qwen3/app/: main.py
lam_qwen3/app/api/: __init__.py
lam_qwen3/app/api/controller/: __init__.py  transformer_audio_controller.py  voice_detect_controller.py
lam_qwen3/app/api/request_body/: tts.py
lam_qwen3/app/api/services/: __init__.py  transformer_audio_services.py  voice_detect_services.py
lam_qwen3/src/: config.rs  main.rs
lam_qwen3/src/audio/: capture.rs  mod.rs
lam_qwen3/src/llm/: chatwithllm.rs  mod.rs
lam_qwen3/src/network/: client.rs  mod.rs
lam_qwen3/src/tts/: mod.rs  transformaudio.rs
