[package]
name = "lam_qwen3"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rodio = "0.17"
cpal = "0.15"            # 跨平台音频后端
crossbeam-channel = "0.5" 
anyhow = "1.0"           

hound = "3.5.0"
axum = "0.7" 

dotenvy = "0.15"

regex = "1.10"